force-app/main/default/objects/RTL_Branch_Manager_Batch_Details__c/RTL_Branch_Manager_Batch_Details__c.object-meta.xml
<CustomObject>
    <label>Branch Manager Batch Details</label>
    <nameField>
        <displayFormat>BMD-{0000}</displayFormat>
        <label>Branch Manager Batch Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Manager Batch Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>