force-app/main/default/objects/RTL_Branch_Manager_Batch_Details__c/fields/RTL_Branch_and_Zone__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_and_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch and Zone</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Branch Manager Batch Details</relationshipLabel>
    <relationshipName>Branch_Manager_Batch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>