force-app/main/default/objects/RTL_Branch_Manager_Batch_Details__c/fields/RTL_Branch_Manager_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Manager_Batch_Job__c</fullName>
    <label>Branch Manager Batch Job</label>
    <referenceTo>RTL_Branch_Manager_Batch_Job__c</referenceTo>
    <relationshipLabel>Branch Manager Batch Details</relationshipLabel>
    <relationshipName>Branch_Manager_Batch_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>