force-app/main/default/objects/RTL_Branch_Manager_Batch_Details__c/fields/RTL_Old_Manager__c.field-meta.xml
<CustomField>
    <fullName>RTL_Old_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>